--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -6,7 +6,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	    <link href="navbar.css" rel="stylesheet">
+	    <link href="Scripts/navbar.css" rel="stylesheet">
 	
   </head>
 
@@ -22,9 +22,9 @@
       </div>
 	  
 	 </div> <!-- /container -->
-    <script src="jquery-3.2.1.js"></script>
+    <script src="Scripts/jquery-3.2.1.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-	<script src="navbar.js"></script>
+	<script src="Scripts/navbar.js"></script>
 
   </body>
 
