--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -1,30 +1,39 @@
 ﻿<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Home</title>
+</head>
 
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	    <link href="Scripts/navbar.css" rel="stylesheet">
-	
-  </head>
+<body>
+<div class="w3-container">
+    
+    <div class="navigationbar"></div>
+    <br/>
+    <div class="w3-container">
+        <div class="w3-card-4" style="width: 50%">
+            <div class="w3-container w3-black"><h1 class="w3-wide">Play Maze Game</h1></div>
+            <div class="w3-container w3-light-gray">
+                
+                <div class="w3-padding-32">
+                    <h3>Play the original game for free.<Br>Play online against your friends.</h3>
+                </div>
 
-  <body>
-      <div class="container">
-	  <div class="navigationbar"></div>
-	  	  <div class="jumbotron">
-        <h1>Play Maze Game</h1>
-        <p><Br>Play the original game for free.<Br>Play online against your friends.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="/LearnMore.html" role="button">Learn more &raquo;</a>
-        </p>
-      </div>
-	  
-	 </div> <!-- /container -->
-    <script src="Scripts/jquery-3.2.1.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-	<script src="Scripts/navbar.js"></script>
-  </body>
+                <div class="w3-margin-bottom">
+                    <h5><a class="w3-button w3-round-xlarge w3-blue w3-hover-shadow" href="/LearnMore.html" role="button">Learn more &raquo;</a></h5>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div> <!-- /container -->
+
+<script src="Scripts/jquery-3.2.1.js"></script>
+<script src="Scripts/navbar.js"></script>
+<link href="Scripts/css/W3.css" rel="stylesheet"/>
+<link href="Scripts/navbar.css" rel="stylesheet">
+
+</body>
 
 </html>
