--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -9,9 +9,9 @@
 <div class="w3-container">
     
     <div class="navigationbar"></div>
-    <br/>
-    <div class="w3-container">
-        <div class="w3-card-4" style="width: 50%">
+
+    <div class="w3-display-container w3-padding-32">
+        <div class="w3-card-4 w3-center w3-display-middle" style="width: 50%; height: 50%">
             <div class="w3-container w3-black"><h1 class="w3-wide">Play Maze Game</h1></div>
             <div class="w3-container w3-light-gray">
                 
@@ -32,7 +32,7 @@
 <script src="Scripts/jquery-3.2.1.js"></script>
 <script src="Scripts/navbar.js"></script>
 <link href="Scripts/css/W3.css" rel="stylesheet"/>
-<link href="Scripts/navbar.css" rel="stylesheet">
+<link href="Scripts/css/navbar.css" rel="stylesheet">
 
 </body>
 
