db changes no more 2 tables, only one for users and rankings by that --> save memory and simplify the program
fix some logic in rankings

--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="w3-margin-bottom">
-                    <h5><a class="w3-button w3-round-xlarge w3-blue w3-hover-shadow" href="/LearnMore.html" role="button">Learn more &raquo;</a></h5>
+                    <h5><a class="w3-button w3-round-xlarge w3-blue w3-hover-shadow" href="Views/LearnMore.html" role="button">Learn more &raquo;</a></h5>
                 </div>
 
             </div>
