--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -11,7 +11,7 @@
     <div class="navigationbar"></div>
 
     <div class="w3-display-container w3-padding-32">
-        <div class="w3-card-4 w3-center w3-display-middle" style="width: 50%; height: 50%">
+        <div id="contDiv" class="w3-card-4 w3-center w3-display-middle">
             <div class="w3-container w3-black"><h1 class="w3-wide">Play Maze Game</h1></div>
             <div class="w3-container w3-light-gray">
                 
@@ -33,6 +33,7 @@
 <script src="Scripts/navbar.js"></script>
 <link href="Scripts/css/W3.css" rel="stylesheet"/>
 <link href="Scripts/css/navbar.css" rel="stylesheet">
+<link href="Scripts/css/homePage.css" rel="stylesheet"/>
 
 </body>
 
